--- a/www/index.html
+++ b/www/index.html
@@ -20,12 +20,14 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="https://raw.githubusercontent.com/MissingCredentials/confusion/master/www/js/app.js"></script>
-    <script src="https://raw.githubusercontent.com/MissingCredentials/confusion/master/www/js/controllers.js"></script>
-    <script src="https://raw.githubusercontent.com/MissingCredentials/confusion/master/www/js/services.js"></script>
+    <script src="js/app.js"  type="text/javascript"></script>
+    <script src="js/controllers.js"  type="text/javascript"></script>
+    <script src="js/services.js"  type="text/javascript"></script>
+
   </head>
 
   <body ng-app="conFusion">
     <ion-nav-view></ion-nav-view>
+
   </body>
 </html>
